Remove developent tools related code

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,11 +2,11 @@ filter:
   excluded_paths:
     - 'tests/'
     - 'vendor/'
+    - 'tools/'
 
 build:
   dependencies:
     override:
-      - composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
       - composer upgrade --no-interaction --prefer-dist
   nodes:
     analysis:
