--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2 # see https://github.com/marketplace/actions/setup-php-action
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
           coverage: none
@@ -39,7 +39,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup PHP
-        uses: shivammathur/setup-php@v2 # see https://github.com/marketplace/actions/setup-php-action
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
           coverage: none
@@ -148,8 +148,7 @@ jobs:
           rm -r -f resources-sat-xml-cloned
       - name: Remove genkgo/xsl on PHP 8.4
         if: matrix.php-version == '8.4'
-        run: |
-          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
+        run: composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
@@ -200,8 +199,7 @@ jobs:
           rm -r -f resources-sat-xml-cloned
       - name: Remove genkgo/xsl on PHP 8.4
         if: matrix.php-version == '8.4'
-        run: |
-          composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
+        run: composer remove genkgo/xsl --dev --no-interaction --no-progress --no-update
       - name: Install project dependencies
         run: |
           composer remove squizlabs/php_codesniffer friendsofphp/php-cs-fixer phpstan/phpstan --dev --no-interaction --no-progress --no-update
