--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        php-version: [ '7.4', '8.0', '8.1', '8.2', '8.3', '8.4' ]
+        php-version: [ '8.0', '8.1', '8.2', '8.3', '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -162,7 +162,7 @@ jobs:
     runs-on: "windows-latest"
     strategy:
       matrix:
-        php-version: [ '7.4', '8.0', '8.1', '8.2', '8.3', '8.4' ]
+        php-version: [ '8.0', '8.1', '8.2', '8.3', '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
