--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@
 /phpcs.xml.dist             export-ignore
 /phpstan.neon.dist          export-ignore
 /phpunit.xml.dist           export-ignore
+/sonar-project.properties   export-ignore
 
 # Do not count these files on github code language
 /tests/assets/**            linguist-detectable=false
